--- a/slides/custom.css
+++ b/slides/custom.css
@@ -61,17 +61,17 @@ slides slide.thank-you-slide {
 /*}*/
 
 
-/*aside.gdbar {*/
-    /*width: 265px !important;*/
-    /*height: 83px !important;*/
-    /*background: #797979 !important;*/
-/*}*/
+aside.gdbar {
+    width: 265px !important;
+    height: 83px !important;
+    background: #797979 !important;
+}
 
-/*aside.gdbar img {*/
-    /*width: auto !important;*/
-    /*height: auto !important;*/
-    /*margin: 15px 20px !important;*/
-/*}*/
+aside.gdbar img {
+    width: auto !important;
+    height: auto !important;
+    margin: 15px 20px !important;
+}
 
 
 /*slide.resources a {*/
